# orbs-network-typescript

./: .dockerignore  .editorconfig  .env-test  .gitignore  .snyk  .yarnrc  Dockerfile  Dockerfile.bot  Dockerfile.e2e  Dockerfile.sdk  Dockerfile.sdk.base  Dockerfile.server  Dockerfile.server.base  LICENSE  LICENSE-HEADER  Procfile  README.md  build-bot.sh  build-e2e.sh  build-sdk.sh  build-server.sh  build.sh  docker-build.sh  docker-compose.staging.yml  docker-compose.test.base.yml  docker-compose.test.e2e.yml  docker-compose.test.network.yml  docker-compose.test.networks.yml  docker-compose.test.services.yml  docker-compose.test.volumes.local.yml  docker-compose.test.volumes.yml  docker-compose.test.yml  docker-compose.yml  docker-export.sh  docker-test.sh  ecs-params.yml  idea-codestyle.xml  install.sh  orbs-contributor-bootstrap.sh  orbs-team-member-bootstrap.sh  (+6 more)
.circleci/: config.yml  deploy.sh  docker-pull.sh  e2e-testnet.sh  export-artifacts.sh  setup-rngd.sh
client/: README.md
client/client-contract-test/: .gitignore  binding.gyp  build.gradle  build.sh  package.json  tsconfig.json
client/client-sdk-javascript/: README.md  binding.gyp  build.sh  package.json  test.sh
client/crypto-sdk/: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-deps.sh  build.sh  clean.sh  configure.sh  docker-build.sh  gtest.cmake  libgcrypt.cmake  libgpg-error.cmake  libsodium.cmake  test.sh
client/crypto-sdk-android/: .gitignore  build.gradle  build.sh  clean.sh  macos_install.sh  readme.md  settings.gradle  test.sh
client/crypto-sdk-android/crypto-sdk/: CMakeLists.txt  build.gradle  proguard-rules.pro
client/crypto-sdk-android/crypto-sdk/src/androidTest/java/com/orbs/cryptosdk/: ExampleInstrumentedTest.java
client/crypto-sdk-android/crypto-sdk/src/main/: AndroidManifest.xml
client/crypto-sdk-android/crypto-sdk/src/main/cpp/: Address.cpp  Address.h  CryptoSDK.cpp  CryptoSDK.h  ED25519Key.cpp  ED25519Key.h  Utilities.cpp  Utilities.h
client/crypto-sdk-android/crypto-sdk/src/main/java/com/orbs/client/: CallContractRequest.java  CallPayload.java  OrbsAPICallContractRequest.java  OrbsAPICallPayload.java  OrbsAPISendTransactionHeader.java  OrbsAPISendTransactionPayload.java  OrbsAPISendTransactionRequest.java  OrbsAPISendTransactionResponse.java  OrbsAPISendTransactionSignature.java  OrbsClient.java  OrbsContract.java  OrbsHashUtils.java  OrbsHost.java  OrbsHttpClient.java  OrbsStableTransactionRequestSerializer.java  SendTransactionHeader.java  SendTransactionPayload.java  SendTransactionRequest.java  SendTransactionResponse.java  SendTransactionSignature.java
client/crypto-sdk-android/crypto-sdk/src/main/java/com/orbs/cryptosdk/: Address.java  CryptoSDK.java  ED25519Key.java
client/crypto-sdk-android/crypto-sdk/src/main/res/values/: strings.xml
client/crypto-sdk-android/crypto-sdk/src/test/java/com/orbs/client/: ContractUnitTests.java  OrbsClientTests.java  OrbsHashTests.java  OrbsStableTransactionRequestSerializerTest.java
client/crypto-sdk-android/crypto-sdk/src/test/java/com/orbs/cryptosdk/: AddressUnitTest.java  ED25519KeyUnitTest.java
client/crypto-sdk-ios/: build.sh
client/crypto-sdk-javascript/: .gitignore  binding.gyp  build.sh  package.json
client/crypto-sdk-python/: .clang-format  CMakeLists.txt  README.md  build.sh  rebuild.sh  test.sh
client/crypto-sdk-python/lib/: CMakeLists.txt  address.cpp  ed25519key.cpp  main.cpp
client/crypto-sdk-python/orbs_client/: __init__.py  address.py  contract.py  http_client.py
client/crypto-sdk-python/test/: __init__.py  address.py  contract.py  ed25519.py  http_client.py
client/crypto-sdk/lib/: CMakeLists.txt  account.cpp  account.h  address.cpp  address.h  base58.cpp  base58.h  crc32.cpp  crc32.h  crypto-sdk.cpp  crypto-sdk.h  crypto.cpp  crypto.h  ed25519key.cpp  ed25519key.h  exports.h  hash.cpp  hash.h  ripemd160.cpp  ripemd160.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h  utils.cpp  utils.h
client/crypto-sdk/test/: CMakeLists.txt  account-test.cpp  address-test.cpp  base58-test.cpp  crc32-test.cpp  crypto-sdk-test.cpp  crypto-tests.cpp  ed25519key-test.cpp  gtest.cmake  hash-test.cpp  main.cpp  ripemd160-test.cpp  sha256-test.cpp  sha512-test.cpp  utils-test.cpp
client/crypto-sdk/toolchains/: ios.cmake
client/slack-bot/: build.sh  package.json
client/typescript-sdk/: package.json  tsconfig.json
config/: development.json  projects.bot.json  projects.e2e.json  projects.json  projects.sdk.json  projects.server.json  staging.json  test.json
deploy/: .gitignore  README.md  deploy-staging.sh  generate-staging-keys.sh  package.json
deploy/bootstrap/: .env  .gitignore  README.md  bootstrap.sh  crontab  docker-compose.yml
deploy/bot/: docker-compose.yml
deploy/cloudformation/: README.md  basic-infrastructure.yaml  cloudformation.yaml  create-stacks.js  create-stacks.parity.sh  create-stacks.sh  deploy.js  node.yaml  package-lock.json  package.json  parameters.basic-infrastracture.json  parameters.json  parameters.node.json  parameters.parity.json  parameters.standalone.json  parity-test.js  stacks.json  test.parity.sh  test.sh
deploy/local/: README.md  Vagrantfile  bootstrap-local.sh
deploy/parity/: bootstrap.sh  docker-compose.yml
deploy/src/: deploy.js  deploy.ts  multi-account.ts
deploy/test/: parity-test.js
docker/: bootstrap-sdk.sh  bootstrap-server.sh  build-bot.sh  build-e2e.sh  build-sdk-base.sh  build-sdk.sh  build-server-base.sh  extract-sdk.sh
e2e/: README.md  build.sh  docker-containers-health-check.sh  generate-nodes-keys.sh  package-lock.json  package.json  test-from-docker.sh  test-from-host.sh  tsconfig.json
e2e/src/: chai-bars-plugin.ts  docker-health-checks.ts  foobar-contract.ts  orbs-client.ts  orbs.ts  perpetual-test.ts  public-api-client.ts  simple-smart-contracts.spec.ts  simple-token-transfer.spec.ts  stress-test.ts  test-config.ts  text-message-contract.ts  topology.ts
e2e/test/: simple-token-transfer.spec.ts
projects/architecture/: .gitignore  README.md  TODO.md  build.sh  package-lock.json  (+3 more)
simulate/: package-lock.json  package.json
(+661 files in other folders)
